Expose Wayland API

--- a/include/meson.build
+++ b/include/meson.build
@@ -1,1 +1,6 @@
-install_headers('vixen/vixen.h', install_dir: 'include/vixen')
+headers = [
+  'vixen/vixen.h',
+  'vixen/vixen-wayland.h',
+]
+
+install_headers(headers, install_dir: 'include/vixen')
